# OpenCV-OpenPose-Demo

./: .gitignore  CMakeLists.txt  README.md  default.xml  getModels.sh  main.cpp
conf/: BODY_25.xml  COCO.xml  HAND.xml
include/: settings.hpp
logsrc/: CMakeLists.txt  loguru.hpp
models/: getModels.sh
openpose/: CMakeLists.txt  multi-person-openpose.cpp  multi-person-openpose.hpp
